[package]
name = "starcoin-superminer"
version = "0.1.0"
authors = ["fikgol <hit.cs.lijun@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "3.3.0"
anyhow = "1.0"
#serial = "0.4"
byteorder = "1.3"